crates/nlink-macros/tests/ui/fail/01_missing_attribute.rs
use nlink_macros::GenlCommand;

#[derive(GenlCommand)]
pub enum NoAttr {
    A = 0,
}

fn main() {}
