crates/nlink-macros/tests/ui/fail/01_missing_attribute.stderr
error: #[derive(GenlCommand)] requires #[genl_command(repr = "u8"|"u16"|...)] attribute
 --> tests/ui/fail/01_missing_attribute.rs:4:10
  |
4 | pub enum NoAttr {
  |          ^^^^^^
